# SnakeStrike

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  ProcessDocumentation.sh  README.md  _config.yml  about.md  index.html  serve.sh
_includes/: associated_classes.html  associated_enumerations.html  associated_fields.html  associated_functions.html  associated_libraries.html  associated_methods.html  breadcrumb.html  example_table.html  head.html  subdir_index.html  theme.html  toc.html  usage_topics.html
_layouts/: help.html  subdir_index.html  usage.html  usage_page.html
common_source/: CMakeLists.txt  MatchingAlgorithmBase.h  ThreadPool.h  TriangulationPipeline.cpp  TriangulationPipeline.h  common.h  common_types.h
common_source/image/: ImageSet.cpp  ImageSet.h  PixelCluster.cpp  PixelCluster.h  PixelClusterSet.cpp  PixelClusterSet.h  PixelSet.cpp  PixelSet.h  SmtImage.cpp  SmtImage.h  SmtPixel.cpp  SmtPixel.h
common_source/io/: File.cpp  File.h
common_source/processing/: CamMats.cpp  CamMats.h  Correspondence.cpp  Correspondence.h  MultiPointSmoother3d.cpp  MultiPointSmoother3d.h  MultiPointTracker.cpp  MultiPointTracker.h  Triangulation.cpp  Triangulation.h
common_source/utils/: ErrorHandling.cpp  ErrorHandling.h  utils.cpp  utils.h
common_source/visualization/: opencv_viz.cpp  opencv_viz.h  pcl_viz.cpp  pcl_viz.h  utils.cpp  utils.h
css/: main-dark.scss  main-light.scss
help/: index.md
images/site/: CalibrationOutput.txt  CalibrationOutput_verbose.txt
libraries/: index.md
libraries/common_source/: index.md
libraries/common_source/free_functions/: index.md
libraries/common_source/image/: f_BackgroundSubtraction.md  f_GetInterestingPixels.md  f_GetPixelClusters.md  f_GetPixelClustersGroupTimestep.md  f_MergeThresholdHalves.md  f_ThresholdImages.md  f_UndistortImages.md  index.md
libraries/common_source/io/: f_CalcRotatedImageBufferSize.md  f_CreateVideoFilename.md  f_GetCameraMatricesFromFile.md  f_GetFileExt.md  f_ParseVideoFilename.md  f_PopulateImagesFromVideos.md  f_ProcessConfigFile.md  f_ReadImages.md  f_ReadMarkedPointsFromFile.md  f_ReadTriangulationInfoToFile.md  f_ReadXMLImages.md  f_WriteConfig.md  f_WriteMarkedPointsToFile.md  f_WriteTriangulationInfoToFile.md  index.md
libraries/common_source/processing/: f_CalculateTransformedPosition.md  f_CorrectTimestepPoints.md  f_EnumerateIndexCombinations.md  f_FindCorrespondingPoints.md  f_GetUserHelpWithCorrespondence.md  f_OrderCorrespondingPoints.md  f_OrderCorrespondingPointsGreedy.md  f_OrderCorrespondingPointsUsingAffine.md  f_TriangulatePixels.md  f_TriangulatePixelsWithHistory.md  f_TriangulatePixelsWithKalman.md  f_operator2A.md  index.md
libraries/common_source/utils/: f_CritErrHdlr.md  f_EraseAllSubStr.md  f_EraseSubString.md  f_EraseSubStrings.md  f_FindAndReplaceAll.md  f_HandleException.md  f_InstallSignal.md  f_stoui.md  f_type2str.md  index.md
libraries/common_source/visualization/: f_AddEpipolarLines.md  f_ConvertPointsToLinesForViewing.md  f_GetColor.md  f_PrintMat.md  f_ShowPerspective.md  f_ViewCorrespondence.md  f_ViewEpipolarLines.md  f_ViewOldAndNewImage.md  index.md
libraries/gui/: RecordType.md  index.md
libraries/gui/BufferingDialog/: index.md  m_BufferingDialog.md  m_IncrementImageDroppedCount.md  m_IncrementImageSavedCount.md  m_QuitSavingImages.md  m_ResetValues.md  m_closeEvent.md  m_metaObject.md  m_on_pushButton_abort_clicked.md  m_operator3D.md  m_qt_check_for_QOBJECT_macro.md  m_qt_metacall.md  m_qt_metacast.md  m_qt_static_metacall.md  m_tr.md  m_trUtf8.md  m_~BufferingDialog.md
libraries/gui/CamCalibrateDialog/: index.md  m_CalibrationImagesXMLExists.md  m_CamCalibrateDialog.md  m_FinishedCalibrationExists.md  m_FreezeDialog.md  m_ProcessXMLFile.md  m_PullNewVerboseOutput.md  m_UpdateXMLFromRecord.md  m_closeEvent.md  m_metaObject.md  m_on_ProcessFinished.md  m_on_calibrateCameraButton_clicked.md  m_operator3D.md  m_tr.md  (+12 more)
libraries/opensource/: index.md
libraries/plugins/: index.md
opensource/: CMakeLists.txt  distance_3d_seg.cpp  distance_3d_seg.h  eigen_cv_conversions.h  stacktrace.h
opensource/Multiview3dRecon-KanataniBook/: CMakeLists.txt  Makefile.in  README.md  READMEJP.md
opensource/Multiview3dRecon-KanataniBook/check/: README.md  fileio.cc  fileio.h  main.cc
opensource/Multiview3dRecon-KanataniBook/srcs/: MultipleViewTriangulation.h  MultipleViewTriangulation_common.cc  Triangulation.h  multipleview_triangulation.cc  optimal_correction.cc  optimal_triplet_correction.cc  triplet_triangulation.cc
opensource/munkres/: CMakeLists.txt  Munkres.cpp  Munkres.h
plugins/: index.md
projects/: CMakeLists.txt
projects/gui/: Buffering.ui  BufferingDialog.cpp  BufferingDialog.h  CMakeLists.txt  CamCalibrate.ui  CamCalibrateDialog.cpp  CamCalibrateDialog.h  CamInfoTree.cpp  CamInfoTree.h  CamPreviewArea.cpp  CamPreviewArea.h  CamPreviewCanvas.cpp  CamPreviewCanvas.h  CamPreviewWindow.cpp  CamPreviewWindow.h  CamTreeItem.cpp  CamTreeItem.h  ConvertCVDataXMLToCSV.py  CorrespondenceDialog.cpp  CorrespondenceDialog.h  CorrespondenceDialog.ui  CorrespondenceImage.cpp  CorrespondenceImage.h  Countdown.ui  CountdownDialog.cpp  CountdownDialog.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  GrabAndSaveImageTask.cpp  GrabAndSaveImageTask.h  GuiCamArray.cpp  GuiCamArray.h  GuiCamInfo.cpp  GuiCamInfo.h  GuiCamera.cpp  GuiCamera.h  GuiDevice.cpp  GuiDevice.h  GuiImage.cpp  (+27 more)
projects/plugins/: CMakeLists.txt
projects/plugins/basler/: BaslerCamInfo.cpp  BaslerCamInfo.h  BaslerCamera.cpp  BaslerCamera.h  BaslerDevice.cpp  BaslerDevice.h  CMakeLists.txt  CamMaker.cpp  CamMaker.h  DeviceMaker.cpp  DeviceMaker.h  HardwareTriggerConfiguration.h
projects/plugins/correspondence/: CMakeLists.txt  MatchMaker.cpp  MatchMaker.h  MatchingAlgorithm.cpp  MatchingAlgorithm.h
projects/simple/: CMakeLists.txt  SimplePointTracking.cpp
usage/: index.md
usage/calibration/: index.md
usage/config/: index.md
usage/export/: index.md
usage/recording/: index.md
usage/setup/: index.md
usage/triangulation/: index.md
usage/viewing/: index.md
(+948 files in other folders)
